tests/language/void/return_void_async_error0_test.dart
// Copyright (c) 2018, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

void main() {
  test();
}

// Testing that a block bodied async function may not return non-void non-top
// values
void test() async {
  return 3;
  //     ^
  // [analyzer] COMPILE_TIME_ERROR.RETURN_OF_INVALID_TYPE
  // [cfe] A value of type 'int' can't be returned from an async function with return type 'void'.
}
